--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "figBudget",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.1.2",
+    "@apollo/client": "^3.1.3",
+    "@apollo/react-hooks": "^4.0.0",
     "@babel/preset-react": "^7.10.4",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
@@ -10,6 +11,7 @@
     "@rails/webpacker": "4.2.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "graphql": "^15.3.0",
+    "graphql-tag": "^2.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
