--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "apollo-boost": "^0.4.9",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
